--- a/www/frontend/src/style/InputForm.css
+++ b/www/frontend/src/style/InputForm.css
@@ -1,8 +1,9 @@
 .insertForm-Container {
   display: flex;
+  box-sizing: border-box;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  /* text-align: center; */
   position: fixed;
   width: 100%;
   height: 100%;
@@ -11,16 +12,20 @@
 }
 
 .containerForm {
-  width: 30%;
-  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  width: 40%;
+  height: 35%;
   background-color: white;
-  border-radius: 5%;
+  border-radius: 5px;
   z-index: 2;
 }
 
 .first-container input {
   width: 100%;
-  height: 25%;
+  height: 30%;
   margin-top: 10px;
 }
 
@@ -28,6 +33,7 @@
   width: 100%;
   height: 100%;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 .first-container {
   top: 0;
@@ -57,13 +63,14 @@
   border: none;
 }
 .cancel-btn {
-  margin-top: 10px;
-  height: 60%;
-  width: 30%;
+  /* margin-top: 10px; */
+  height: 100%;
+  width: 50%;
   border-radius: 10px;
   background-color: red;
   color: white;
   font-size: small;
   font-weight: 600;
   border: none;
+  padding: 6px;
 }
