--- a/www/frontend/src/style/EditForm.css
+++ b/www/frontend/src/style/EditForm.css
@@ -1,6 +1,5 @@
 .editForm-Container {
-  /* top: 0;
-  left: 0; */
+  top: 0%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,11 +30,13 @@
   width: 100%;
   height: 25%;
   margin-top: 10px;
+  padding-left: 10px;
 }
 .container-form textarea {
   width: 100%;
   height: 100%;
   margin-top: 10px;
+  padding-left: 10px;
 }
 .but {
   display: flex;
