--- a/www/frontend/src/style/InputForm.css
+++ b/www/frontend/src/style/InputForm.css
@@ -1,10 +1,9 @@
 .insertForm-Container {
   top: 0%;
   display: flex;
-  box-sizing: border-box;
   justify-content: center;
   align-items: center;
-  /* text-align: center; */
+  text-align: center;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -16,28 +15,27 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: stretch;
-  width: 40%;
-  height: 35%;
+  width: 30%;
+  height: 55%;
   background-color: white;
-  border-radius: 5px;
+  border-radius: 5%;
   z-index: 2;
 }
 
 .first-container input {
   width: 100%;
-  height: 30%;
+  height: 25%;
   margin-top: 10px;
+  padding-left: 5px;
 }
 
 .first-container textarea {
   width: 100%;
   height: 100%;
   margin-top: 10px;
-  margin-bottom: 10px;
+  padding-left: 5px;
 }
 .first-container {
-  top: 0;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -51,10 +49,12 @@
   gap: 10px;
   width: 100%;
   height: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .create-btn {
   height: 100%;
-  width: 50%;
+  width: 30%;
   border-radius: 10px;
   background-color: blue;
   color: white;
@@ -65,7 +65,7 @@
 }
 .cancel-btn {
   height: 100%;
-  width: 50%;
+  width: 30%;
   border-radius: 10px;
   background-color: red;
   color: white;
@@ -73,4 +73,11 @@
   font-weight: 600;
   border: none;
   padding: 6px;
+}
+label {
+  font-size: small;
+  text-align: left;
+  width: 100%;
+  height: 20%;
+  margin-top: 10px;
 }
