fix:input price quantity insert form and edit form

--- a/www/frontend/src/style/Table.css
+++ b/www/frontend/src/style/Table.css
@@ -40,6 +40,7 @@ td {
   width: 50%;
   height: 100%;
   color: white;
+  font-weight: 600;
   background-color: green;
   border: none;
   padding: 2px;
