--- a/www/frontend/src/style/App.css
+++ b/www/frontend/src/style/App.css
@@ -25,7 +25,7 @@
   width: 30%;
   height: 100%;
   background-color: yellow;
-  /* border: black 2px solid; */
+  font-weight: 600;
   padding: 6px;
   border-radius: 5px;
   border: none;
