--- a/www/frontend/src/style/InputForm.css
+++ b/www/frontend/src/style/InputForm.css
@@ -1,3 +1,10 @@
+/* Define the color values */
+:root {
+  --bgbuttoncreate: blue;
+  --bgbuttoncancel: red;
+  --bgbehindinsertform: rgba(0, 0, 0, 0.7);
+  --bginsertform: white;
+}
 .insertForm-Container {
   top: 0%;
   display: flex;
@@ -8,7 +15,7 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--bgbehindinsertform);
 }
 
 .containerForm {
@@ -17,30 +24,29 @@
   justify-content: center;
   width: 30%;
   height: 55%;
-  background-color: white;
+  background-color: var(--bginsertform);
   border-radius: 5%;
   z-index: 2;
 }
-
-.first-container input {
+.input-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+}
+.input-container input {
   width: 100%;
   height: 25%;
   margin-top: 10px;
   padding-left: 5px;
 }
 
-.first-container textarea {
+.input-container textarea {
   width: 100%;
   height: 100%;
   margin-top: 10px;
   padding-left: 5px;
-}
-.first-container {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  width: 100%;
-  height: 100%;
 }
 
 .insert-btn {
@@ -56,7 +62,7 @@
   height: 100%;
   width: 30%;
   border-radius: 10px;
-  background-color: blue;
+  background-color: var(--bgbuttoncreate);
   color: white;
   font-size: small;
   font-weight: 600;
@@ -67,13 +73,14 @@
   height: 100%;
   width: 30%;
   border-radius: 10px;
-  background-color: red;
+  background-color: var(--bgbuttoncancel);
   color: white;
   font-size: small;
   font-weight: 600;
   border: none;
   padding: 6px;
 }
+
 label {
   font-size: small;
   text-align: left;
