--- a/www/frontend/src/style/InputForm.css
+++ b/www/frontend/src/style/InputForm.css
@@ -59,6 +59,7 @@
   margin-bottom: 10px;
 }
 .create-btn {
+  margin-top: 10px;
   height: 100%;
   width: 30%;
   border-radius: 10px;
@@ -70,6 +71,7 @@
   padding: 6px;
 }
 .cancel-btn {
+  margin-top: 10px;
   height: 100%;
   width: 30%;
   border-radius: 10px;
@@ -81,8 +83,8 @@
   padding: 6px;
 }
 
-label {
-  font-size: small;
+.input-container label {
+  font-size: medium;
   text-align: left;
   width: 100%;
   height: 20%;
